# triangle-checkers

./: Cargo.toml
src/: board.rs  gamestate.rs  lazy_fixed_iter.rs  main.rs  u32set.rs
