[package]
name = "triangle-checkers"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
bit-set = "0.5.2"
boolinator = "2.4.0"
crossterm = "0.20.0"
fxhash = "0.2.1"
itertools = "0.10.1"
num = "0.4.0"
num-traits = "0.2.14"
rand = "0.8.4"
rayon = "1.5.1"
smallvec = "1.6.1"
speedy2d = "1.1.0"
